WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63665
X86Assembler does not encode byte registers in 64-bit mode correctly.
https://bugs.webkit.org/show_bug.cgi?id=63665
Summary
X86Assembler does not encode byte registers in 64-bit mode correctly.
Filip Pizlo
Reported
2011-06-29 15:46:14 PDT
The JSC 64-bit JITs expect to be able to use any GPR as a byte register in 64-bit mode. But this does not work for sil, dil, spl, or bpl, because the X86Assembler fails to emit a blank REX (a REX with no bits set).
Attachments
the patch
(3.03 KB, patch)
2011-06-29 16:05 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch (fix style)
(3.04 KB, patch)
2011-06-29 16:33 PDT
,
Filip Pizlo
barraclough
: review-
barraclough
: commit-queue-
Details
Formatted Diff
Diff
the patch (redid as per review)
(1.72 KB, patch)
2011-06-29 23:57 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-06-29 16:05:02 PDT
Created
attachment 99169
[details]
the patch
WebKit Review Bot
Comment 2
2011-06-29 16:07:35 PDT
Attachment 99169
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/assembler/X86Assembler.h:2005: Missing space inside { }. [whitespace/braces] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2011-06-29 16:33:17 PDT
Created
attachment 99178
[details]
the patch (fix style)
Gavin Barraclough
Comment 4
2011-06-29 18:06:44 PDT
Comment on
attachment 99178
[details]
the patch (fix style) r-ing per our discussion.
Filip Pizlo
Comment 5
2011-06-29 23:57:16 PDT
Created
attachment 99246
[details]
the patch (redid as per review)
WebKit Review Bot
Comment 6
2011-06-30 14:31:09 PDT
Comment on
attachment 99246
[details]
the patch (redid as per review) Clearing flags on attachment: 99246 Committed
r90157
: <
http://trac.webkit.org/changeset/90157
>
WebKit Review Bot
Comment 7
2011-06-30 14:31:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug