2011-06-30  Filip Pizlo  <fpizlo@apple.com>

Reviewed by Gavin Barraclough.

        X86Assembler does not encode byte registers in 64-bit mode correctly.
        https://bugs.webkit.org/show_bug.cgi?id=63665

        * assembler/X86Assembler.h:
        (JSC::X86Assembler::testb_rr):
        (JSC::X86Assembler::X86InstructionFormatter::oneByteOp8):

Canonical link: https://commits.webkit.org/79431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90157 268f45cc-cd09-0410-ab3c-d52691b4dbfc